added Threads library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,9 @@ cmake_minimum_required(VERSION 3.7)
 project(OperatorAugmentation)
 
 find_package(Eigen3 3.3 REQUIRED NO_MODULE)
+find_package(Threads)
 
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(OperatorAugmentation main.cpp augmentation.cpp diagnostics.h dgnGridLaplacian1D.cpp dgnGridLaplacian2D.cpp diagnostics.cpp)
-target_link_libraries(OperatorAugmentation Eigen3::Eigen)
+target_link_libraries(OperatorAugmentation Eigen3::Eigen Threads::Threads)
