--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,5 @@ find_package(Threads)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(OperatorAugmentation main.cpp augmentation.cpp diagnostics.h dgnGridLaplacian1D.cpp dgnGridLaplacian2D.cpp diagnostics.cpp)
+add_executable(OperatorAugmentation main.cpp augmentation.cpp diagnostics.h dgnGridLaplacian1D.cpp dgnGridLaplacian2D.cpp diagnostics.cpp hfe.cpp meshlap.h meshlap.cpp dgnMeshLaplacian.cpp)
 target_link_libraries(OperatorAugmentation Eigen3::Eigen Threads::Threads)
