--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,5 +8,8 @@ find_package(Threads)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(OperatorAugmentation main.cpp augmentation.cpp diagnostics.h dgnGridLaplacian1D.cpp dgnGridLaplacian2D.cpp diagnostics.cpp hfe.cpp meshlap.h meshlap.cpp dgnMeshLaplacian.cpp graphlap.h graphlap.cpp dgnGraphEdgePerturb.cpp matutil.h matutil.cpp dgnGraphEdgeDrop.cpp)
+add_executable(OperatorAugmentation main.cpp augmentation.cpp dgnGridLaplacian1D.cpp
+        dgnGridLaplacian2D.cpp diagnostics.cpp hfe.cpp meshlap.cpp dgnMeshLaplacian.cpp
+        graphlap.cpp dgnGraphEdgePerturb.cpp matutil.cpp dgnGraphEdgeDrop.cpp
+        auxAugmentation.cpp auxDiagnostics.h)
 target_link_libraries(OperatorAugmentation Eigen3::Eigen Threads::Threads)
