--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,6 @@ set(CMAKE_CXX_STANDARD 14)
 
 add_executable(OperatorAugmentation main.cpp augmentation.cpp dgnGridLaplacian1D.cpp
         dgnGridLaplacian2D.cpp diagnostics.cpp hfe.cpp meshlap.cpp dgnMeshLaplacian.cpp
-        graphlap.cpp dgnGraphEdgePerturb.cpp matutil.cpp dgnGraphEdgeDrop.cpp
+        graphlap.cpp dgnGraphEdgeDrop.cpp matutil.cpp dgnGraphEdgePerturb.cpp
         auxAugmentation.cpp auxDiagnostics.h)
 target_link_libraries(OperatorAugmentation Eigen3::Eigen Threads::Threads)
