--- a/config_default.json
+++ b/config_default.json
@@ -48,7 +48,8 @@
     "preset" : 0,
     "histogramSamples" : 12,
     "threadCount" : 4,
-    "gridSize" : 8,
+    "gridSize" : 32,
+    "discountFactor" : 0.9,
     "numSubRunsNaive" : 10000,
     "numSubRuns" : 100,
     "samplesPerSubRun" : 100
